package main.model;

public enum Color {
  YELLOW,
  BLUE,
  RED,
  GREEN;
}
